PR/44647: commit fix proposed by Takahiro HAYASHI verified to be working in -current and also helps NetBSD-6 BETA2